[gd_scene load_steps=26 format=3 uid="uid://csgo2h26h0sjk"]

[ext_resource type="Script" path="res://punk.gd" id="1_2uk6v"]
[ext_resource type="Texture2D" uid="uid://dhoul3q4rqn00" path="res://Assets/Free 3 Cyberpunk Sprites Pixel Art/2 Punk/Punk_attack3.png" id="2_2gre6"]
[ext_resource type="Texture2D" uid="uid://dvye4o464ninv" path="res://Assets/Free 3 Cyberpunk Sprites Pixel Art/2 Punk/Punk_idle.png" id="2_5kwpm"]
[ext_resource type="Texture2D" uid="uid://bij1dsslnehuy" path="res://Assets/Free 3 Cyberpunk Sprites Pixel Art/2 Punk/Punk_run.png" id="3_myej5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_i3dq8"]
atlas = ExtResource("2_2gre6")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_88wq5"]
atlas = ExtResource("2_2gre6")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4k23h"]
atlas = ExtResource("2_2gre6")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sxku5"]
atlas = ExtResource("2_2gre6")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vk6qk"]
atlas = ExtResource("2_2gre6")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6t1b"]
atlas = ExtResource("2_2gre6")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4sxwp"]
atlas = ExtResource("2_2gre6")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_e31y8"]
atlas = ExtResource("2_2gre6")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_826q6"]
atlas = ExtResource("2_5kwpm")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5qe2"]
atlas = ExtResource("2_5kwpm")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_oxbnv"]
atlas = ExtResource("2_5kwpm")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_g36ku"]
atlas = ExtResource("2_5kwpm")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qktvj"]
atlas = ExtResource("3_myej5")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dc0mi"]
atlas = ExtResource("3_myej5")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxjve"]
atlas = ExtResource("3_myej5")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_v6utw"]
atlas = ExtResource("3_myej5")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_aq5ng"]
atlas = ExtResource("3_myej5")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vptfo"]
atlas = ExtResource("3_myej5")
region = Rect2(240, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_qf32b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3dq8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_88wq5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4k23h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sxku5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vk6qk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6t1b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4sxwp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e31y8")
}],
"loop": false,
"name": &"attack",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_826q6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5qe2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oxbnv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g36ku")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qktvj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dc0mi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxjve")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v6utw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aq5ng")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vptfo")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3w1nu"]
size = Vector2(3.1746, 14.229)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wa5f0"]
size = Vector2(3.2, 16.9605)

[node name="Punk" type="CharacterBody2D"]
scale = Vector2(3, 3)
script = ExtResource("1_2uk6v")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
light_mask = 8
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_qf32b")
animation = &"idle"

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2(3, 3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-11.3333, 8.72222)
scale = Vector2(1.96, 1.96)
shape = SubResource("RectangleShape2D_3w1nu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-34, 29.4014)
scale = Vector2(5, 5)
shape = SubResource("RectangleShape2D_wa5f0")

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(-16, 0)
rotation = -1.5708
target_position = Vector2(0, 48)

[node name="RayCast2D3" type="RayCast2D" parent="."]
rotation = -1.5708
target_position = Vector2(0, 768)

[node name="RayCast2D2" type="RayCast2D" parent="."]
position = Vector2(16, 64)
target_position = Vector2(0, 32)

[node name="IdleTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="AttackCooldownTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AttackDelayTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_idle_timer_timeout"]
[connection signal="timeout" from="AttackCooldownTimer" to="." method="_on_attack_cooldown_timer_timeout"]
[connection signal="timeout" from="AttackDelayTimer" to="." method="_on_attack_delay_timer_timeout"]
